--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Chris Stricker: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <!--<link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">-->
 
     <!--<link href="css/style.min.css" rel="stylesheet" media="screen">-->
     <link href="css/print.css" rel="stylesheet" media="print">
@@ -119,5 +119,16 @@
     <footer>
       <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
     </footer>
+    <script>
+      WebFontConfig = {
+        google: { families: ['Open Sans:400,700'] }
+      };
+
+      (function(d) {
+        var wf = d.createElement('script'), s = d.scripts[0];
+        wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js';
+        s.parentNode.insertBefore(wf, s);
+      })(document);
+    </script>
   </body>
 </html>
